Closed
Bug 402833
Opened 18 years ago
Closed 18 years ago
ASSERTION: ReleaseSubtree not called with xml parsing error in attribute
Categories
(Core :: XML, defect, P2)
Core
XML
Tracking
()
VERIFIED
FIXED
mozilla1.9beta2
People
(Reporter: martijn.martijn, Assigned: peterv)
Details
(Keywords: assertion, memory-leak, testcase)
Attachments
(2 files)
|
116 bytes,
application/vnd.mozilla.xul+xml
|
Details | |
|
3.65 KB,
patch
|
sicking
:
review+
sicking
:
superreview+
|
Details | Diff | Splinter Review |
(I have no idea where to put this in)
See testcase, which triggers this assertion when loading it in current debug trunk build on windows:
###!!! ASSERTION: ReleaseSubtree not called: '!mChildren && mNumChildren == 0',
file c:\mozilla-build\mozilla\content\xul\content\src\nsXULElement.h, line 259
When looking at the source of that:
http://lxr.mozilla.org/seamonkey/source/content/xul/content/src/nsXULElement.h#255
It seems to me that this could be a memory leak.
| Assignee | ||
Comment 1•18 years ago
|
||
Yes, this leaks the prototype elements.
Assignee: nobody → peterv
Flags: blocking1.9?
OS: Windows XP → All
Priority: -- → P2
Hardware: PC → All
Target Milestone: --- → mozilla1.9 M10
| Assignee | ||
Comment 2•18 years ago
|
||
Attachment #287707 -
Flags: superreview?(jonas)
Attachment #287707 -
Flags: review?(jonas)
Keywords: mlk
Attachment #287707 -
Flags: superreview?(jonas)
Attachment #287707 -
Flags: superreview+
Attachment #287707 -
Flags: review?(jonas)
Attachment #287707 -
Flags: review+
Updated•18 years ago
|
Flags: blocking1.9? → blocking1.9+
| Assignee | ||
Updated•18 years ago
|
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
| Reporter | ||
Comment 3•18 years ago
|
||
Verified fixed after updating my debug trunk build to today.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•