Fix for bug 402833 (ASSERTION: ReleaseSubtree not called with xml parsing error in attribute). r/sr=sicking.